# proactor

./: .gitignore  CMakeLists.txt  README.md
source/: AdaptiveSleeper.h  Proactor.h  ProactorPartition.h  Queue.h  ThreadAffinity.cpp  ThreadAffinity.h  lockfreequeue.h  proactor.h  proactorpartition.h  queue.h  threadaffinity.cpp  threadaffinity.h
test/: Accumulator.h  PerformanceTest.cpp  QueueTest.cpp  accumulator.cpp  accumulator.h  performancetest.cpp  proactortest.cpp  queuetest.cpp
